Add some model training tests + tempo feature extraction analysis

--- a/analyse_audio_first_steps.ipynb
+++ b/analyse_audio_first_steps.ipynb
@@ -712,7 +712,15 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Chroma Frequencies"
+    "### Chroma Frequencies\n",
+    "\n",
+    "Chroma frequencies, also known as chroma feature representation, is a way to extract musical information from an audio signal. It represents the distribution of energy across the 12 pitch classes in the Western musical scale.\n",
+    "\n",
+    "Chroma frequencies are useful for analyzing the harmonic content of music, as they can be used to identify chord progressions, melody lines, and tonal centers. They are often used in music information retrieval systems, such as automatic music transcription, genre classification, and content-based music retrieval.\n",
+    "\n",
+    "One of the main advantages of chroma features is their ability to represent tonality information without being affected by octave displacement, which means that notes with different frequencies but the same pitch class are treated equally. This is particularly useful for analyzing polyphonic music, where multiple notes are played simultaneously.\n",
+    "\n",
+    "In summary, chroma frequencies provide a compact and musically meaningful representation of the harmonic content of music, which can be used for a variety of music analysis tasks."
    ],
    "metadata": {
     "collapsed": false
@@ -751,91 +759,6 @@
      "end_time": "2023-05-08T23:31:53.551851Z",
      "start_time": "2023-05-08T23:31:53.034593Z"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-05-08T23:32:51.923783Z",
-     "start_time": "2023-05-08T23:32:51.847160Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "(1293,)"
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "spectral_rolloff.shape\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-05-08T23:33:02.841775Z",
-     "start_time": "2023-05-08T23:33:02.796416Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import pickle\n",
-    "\n",
-    "labels = [\n",
-    "    \"blues\",\n",
-    "    \"classical\",\n",
-    "    \"country\",\n",
-    "    \"disco\",\n",
-    "    \"hiphop\",\n",
-    "    \"jazz\",\n",
-    "    \"metal\",\n",
-    "    \"pop\",\n",
-    "    \"reggae\",\n",
-    "    \"rock\"\n",
-    "]\n",
-    "\n",
-    "data = []\n",
-    "for i, label in enumerate(labels):\n",
-    "    for filename in os.scandir(f'{base_path}/{label}'):\n",
-    "        if filename.is_file():\n",
-    "            x, sr = librosa.load(audio_path)\n",
-    "            data.append((i, x, sr))\n",
-    "\n",
-    "with open('processed_data.pkl', 'wb') as f:\n",
-    "    pickle.dump(data, f)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-05-08T23:48:58.287231Z",
-     "start_time": "2023-05-08T23:48:49.759690Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
    }
   }
  ],
