--- a/analyse_audio_tempo_bpm.ipynb
+++ b/analyse_audio_tempo_bpm.ipynb
@@ -706,6 +706,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 57,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[0.21795288, 0.21752704, 0.21710769, ..., 0.20593034, 0.20542155,\n        0.20491433],\n       [0.33777521, 0.33859533, 0.33940968, ..., 0.28843677, 0.28731217,\n        0.28618958],\n       [0.27862976, 0.27906128, 0.27949109, ..., 0.24175491, 0.24080969,\n        0.23987092],\n       ...,\n       [0.20671517, 0.20808767, 0.20945674, ..., 0.24674473, 0.24512558,\n        0.24349836],\n       [0.30562489, 0.30703083, 0.30841969, ..., 0.12234342, 0.12108647,\n        0.11983487],\n       [0.13512758, 0.13631488, 0.13750216, ..., 0.17285409, 0.17128904,\n        0.16972194]])"
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tempogram = librosa.feature.tempogram(y=y, sr=sr)\n",
+    "tgr = librosa.feature.tempogram_ratio(tg=tempogram, sr=sr)\n",
+    "tgr"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-14T11:56:36.869608Z",
+     "start_time": "2023-05-14T11:56:36.687339Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 56,
    "outputs": [
     {
@@ -726,8 +752,6 @@
     }
    ],
    "source": [
-    "tempogram = librosa.feature.tempogram(y=y, sr=sr)\n",
-    "tgr = librosa.feature.tempogram_ratio(tg=tempogram, sr=sr)\n",
     "fig, ax = plt.subplots(nrows=2, sharex=True)\n",
     "librosa.display.specshow(tempogram, x_axis='time', y_axis='tempo', ax=ax[0])\n",
     "librosa.display.specshow(tgr, x_axis='time', ax=ax[1])\n",
