test adding dynamic tempo mean/min/max to model

--- a/analyse_audio_tempo_bpm.ipynb
+++ b/analyse_audio_tempo_bpm.ipynb
@@ -174,8 +174,6 @@
    "source": [
     "## Estimate the dynamic tempo\n",
     "\n",
-    "\n",
-    "ChatGPT\n",
     "A dynamic tempo estimation in audio feature extraction provides information about the variation of tempo (i.e., the speed at which the music is played) over time in a given piece of music. Unlike static tempo estimation, which assumes a fixed tempo throughout the entire piece of music, dynamic tempo estimation takes into account the variations in tempo that occur naturally in music.\n",
     "\n",
     "Dynamic tempo estimation can be useful for various music analysis tasks, such as beat tracking and rhythm analysis. Beat tracking involves identifying the rhythmic structure of a piece of music, including the locations of beats and downbeats, while rhythm analysis involves identifying the patterns of sound and silence in the music.\n",
@@ -258,7 +256,7 @@
     "    aggregate=None,\n",
     "    prior=prior_lognorm\n",
     ")\n",
-    "dynamic_tempo_lognorm\n"
+    "dynamic_tempo_lognorm"
    ],
    "metadata": {
     "collapsed": false,
