--- a/analyse_audio_features.ipynb
+++ b/analyse_audio_features.ipynb
@@ -295,17 +295,17 @@
     "\n",
     "#### Frequency Resolution:\n",
     "\n",
-    "STFT: The STFT provides a fixed frequency resolution throughout the entire spectrum. It divides the signal into overlapping frames and computes the Fourier Transform on each frame. As a result, the frequency resolution is constant across the entire frequency range.\n",
-    "CQT: The CQT offers a logarithmically spaced frequency resolution. It achieves this by dividing the signal into frames of varying width, with narrower frames at higher frequencies and wider frames at lower frequencies. This logarithmic spacing provides a more perceptually accurate representation of pitch perception and better aligns with the human auditory system.\n",
+    "**STFT**: The STFT provides a fixed frequency resolution throughout the entire spectrum. It divides the signal into overlapping frames and computes the Fourier Transform on each frame. As a result, the frequency resolution is constant across the entire frequency range.\n",
+    "**CQT**: The CQT offers a logarithmically spaced frequency resolution. It achieves this by dividing the signal into frames of varying width, with narrower frames at higher frequencies and wider frames at lower frequencies. This logarithmic spacing provides a more perceptually accurate representation of pitch perception and better aligns with the human auditory system.\n",
     "\n",
     "#### Time-Frequency Trade-off:\n",
     "\n",
-    "STFT: The STFT provides good temporal resolution, meaning it can capture rapid changes in the signal over time. However, its frequency resolution is limited, especially for low frequencies. This trade-off makes the STFT well-suited for analyzing transient events or detecting short-term spectral changes.\n",
-    "CQT: The CQT sacrifices some temporal resolution to achieve better frequency resolution, particularly in the low-frequency range. It is suitable for tasks that require more accurate pitch estimation and harmonic analysis, where the temporal details are less important than the spectral characteristics.\n",
+    "*STFT*: The STFT provides good temporal resolution, meaning it can capture rapid changes in the signal over time. However, its frequency resolution is limited, especially for low frequencies. This trade-off makes the STFT well-suited for analyzing transient events or detecting short-term spectral changes.\n",
+    "*CQT*: The CQT sacrifices some temporal resolution to achieve better frequency resolution, particularly in the low-frequency range. It is suitable for tasks that require more accurate pitch estimation and harmonic analysis, where the temporal details are less important than the spectral characteristics.\n",
     "Musical Pitch Analysis:\n",
     "\n",
-    "STFT: The STFT is often used for tasks that involve analyzing and processing audio signals in the context of musical pitch. It can capture the harmonic content of the signal, but its fixed frequency resolution may result in less accurate pitch estimation, especially for complex musical signals.\n",
-    "CQT: The CQT is particularly useful for tasks that require precise pitch analysis, such as melody extraction, chord recognition, or pitch tracking. Its logarithmic frequency resolution better aligns with the musical pitch scale, allowing for more accurate estimation of pitch and harmonic relationships.\n",
+    "*STFT*: The STFT is often used for tasks that involve analyzing and processing audio signals in the context of musical pitch. It can capture the harmonic content of the signal, but its fixed frequency resolution may result in less accurate pitch estimation, especially for complex musical signals.\n",
+    "*CQT*: The CQT is particularly useful for tasks that require precise pitch analysis, such as melody extraction, chord recognition, or pitch tracking. Its logarithmic frequency resolution better aligns with the musical pitch scale, allowing for more accurate estimation of pitch and harmonic relationships.\n",
     "\n",
     "#### Spectrogram Visualization:\n",
     "\n",
