--- a/analyse_audio_features.ipynb
+++ b/analyse_audio_features.ipynb
@@ -295,9 +295,9 @@
     "\n",
     "#### Frequency Resolution:\n",
     "\n",
-    "**STFT**: The STFT provides a fixed frequency resolution throughout the entire spectrum. It divides the signal into overlapping frames and computes the Fourier Transform on each frame. As a result, the frequency resolution is constant across the entire frequency range.\n",
+    "*STFT*: The STFT provides a fixed frequency resolution throughout the entire spectrum. It divides the signal into overlapping frames and computes the Fourier Transform on each frame. As a result, the frequency resolution is constant across the entire frequency range.\n",
     "\n",
-    "**CQT**: The CQT offers a logarithmically spaced frequency resolution. It achieves this by dividing the signal into frames of varying width, with narrower frames at higher frequencies and wider frames at lower frequencies. This logarithmic spacing provides a more perceptually accurate representation of pitch perception and better aligns with the human auditory system.\n",
+    "*CQT*: The CQT offers a logarithmically spaced frequency resolution. It achieves this by dividing the signal into frames of varying width, with narrower frames at higher frequencies and wider frames at lower frequencies. This logarithmic spacing provides a more perceptually accurate representation of pitch perception and better aligns with the human auditory system.\n",
     "\n",
     "#### Time-Frequency Trade-off:\n",
     "\n",
@@ -312,8 +312,9 @@
     "\n",
     "#### Spectrogram Visualization:\n",
     "\n",
-    "STFT: The STFT spectrogram is commonly used for visualizing the spectral content of audio signals over time. It provides a straightforward representation where each pixel represents the magnitude of a specific frequency component at a particular time.\n",
-    "CQT: The CQT spectrogram offers a logarithmic frequency axis, which can be useful for visualizing pitch-related features. It can reveal the harmonic structure and tonal characteristics of the signal more intuitively than the linearly spaced frequency axis of the STFT spectrogram.\n",
+    "*STFT*: The STFT spectrogram is commonly used for visualizing the spectral content of audio signals over time. It provides a straightforward representation where each pixel represents the magnitude of a specific frequency component at a particular time.\n",
+    "\n",
+    "*CQT*: The CQT spectrogram offers a logarithmic frequency axis, which can be useful for visualizing pitch-related features. It can reveal the harmonic structure and tonal characteristics of the signal more intuitively than the linearly spaced frequency axis of the STFT spectrogram.\n",
     "\n",
     "In summary, the choice between CQT and STFT depends on the specific application and the trade-off between temporal and frequency resolution. If accurate pitch analysis and harmonic information are crucial, the CQT is generally preferred. On the other hand, if capturing rapid temporal changes or processing transient events is the main objective, the STFT is a suitable choice."
    ],
