Add similarity search

--- a/model_one_mean_min_max_features_add_tempo/mean_min_max_model.ipynb
+++ b/model_one_mean_min_max_features_add_tempo/mean_min_max_model.ipynb
@@ -153,7 +153,7 @@
     "        data = pickle.load(f)\n",
     "    xs = []\n",
     "    ys = []\n",
-    "    for label, y, sr in data:\n",
+    "    for label, y, sr, filename in data:\n",
     "        features = get_feature(y, sr)\n",
     "        xs.append(features)\n",
     "        ys.append(label)\n",
