--- a/model_one_mean_min_max_features_one/mean_min_max_model.ipynb
+++ b/model_one_mean_min_max_features_one/mean_min_max_model.ipynb
@@ -113,7 +113,7 @@
     "        data = pickle.load(f)\n",
     "    xs = []\n",
     "    ys = []\n",
-    "    for label, y, sr in data:\n",
+    "    for label, y, sr, filename in data:\n",
     "        xs.append(get_feature(y, sr))\n",
     "        ys.append(label)\n",
     "    xs = np.array(xs)\n",
