--- a/model_two_mfcc_mean_min_max/visualise_data.ipynb
+++ b/model_two_mfcc_mean_min_max/visualise_data.ipynb
@@ -82,7 +82,7 @@
     "all_mfcc = []\n",
     "all_mean = []\n",
     "labels = []\n",
-    "for label, y, sr in data:\n",
+    "for label, y, sr, filename in data:\n",
     "    mfcc, mean = get_feature(y, sr)\n",
     "    if len(mfcc) != 16809:\n",
     "        continue\n",
