--- a/model_three_random_forest/random_forest_model.ipynb
+++ b/model_three_random_forest/random_forest_model.ipynb
@@ -157,7 +157,7 @@
     "        data = pickle.load(f)\n",
     "    xs = []\n",
     "    ys = []\n",
-    "    for label, y, sr in data:\n",
+    "    for label, y, sr, filename in data:\n",
     "        features = get_feature(y, sr)\n",
     "        xs.append(features)\n",
     "        ys.append(label)\n",
